k8s-deployment/deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  ingress-resource-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 80

      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 80

      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: todo
            port:
              number: 80
